--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /target/
+
+.classpath
+*.project
+.settings/org.eclipse.core.resources.prefs
+*.prefs
