--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,17 @@
 					</connectors>
 				</configuration>
 			</plugin>
+			
+			<!-- tomcat 插件 -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<port>80</port>
+					<url>http://localhost</url>
+					<path>/</path>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	
